name:                org-tools
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/org-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

extra-source-files:
  test/ref/*.org

library
  hs-source-dirs:      src
  exposed-modules:     Text.Org
                     , Text.Org.Types
                     , Text.Org.PrettyPrint
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , aeson
                     , megaparsec
                     , mtl
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base
                     , hspec
                     , org-tools
                     , text
  other-modules:
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover

source-repository head
  type:                git
  location:            https://github.com/githubuser/org-tools
